# peets

./: LICENSE  pyproject.toml  setup.py
peets/: __init__.py  __main__.py  _plugin.py  config.py  const.py  entities.py  error.py  finder.py  guessit.py  iso.py  library.py  merger.py  naming.py  nfo.py  scraper.py  tmdb.py  tmp.py  ui.py
peets/entities/: country_code.py  media_artwork.py  media_certification.py  media_entity.py  media_genres.py  media_trailer.py  movie.py  person.py
peets/nfo/: __init__.py  nfo.py
peets/nfo/kodi/: __init__.py  common.py  movie.py  tvshow.py  tvshow_episode.py
peets/tmdb/: __init__.py  artwork.py  config.py  const.py  metadata.py
peets/ui/: __init__.py  action.py  entry.py  ui.py
peets/util/: type_utils.py
test/: conftest.py  test_finder.py  test_guessit.py  test_merger.py  test_naming.py  test_nfo.py  test_tmdb.py  util.py
test/test_nfo/: movie.json
test/test_tmdb/: movie.json  movie_certification.json  movie_images.json  movie_original_release_date_only.json  season.json  tvshow.json
