[build-system]
requires = ["setuptools >= 65"]
build-backend = "setuptools.build_meta"

[project]
name = "peets"
version = "0.0.1"
dependencies = [
    "typing_inspect",  # 运行时泛型内省（introspection）
    "requests",
    "lxml",
    "regex",
    "tmdbsimple == 2.9.1",
    "reflink == 0.2.1",
    "guessit",
    "teletype"
]

[project.optional-dependencies]
# pip install -e '.[tests]'
tests = [
  'pytest',
  'pytest-mock'
]