[build-system]
requires = ["setuptools >= 65"]
build-backend = "setuptools.build_meta"

[project]
name = "peets"
version = "0.0.1"
dependencies = [
    "typing_inspect",  # 运行时泛型内省（introspection）
    "requests",
    "lxml",
    "regex",
    "tmdbsimple == 2.9.1",
    "reflink == 0.2.1",
    "guessit",
    "teletype @ git+https://github.com/douo/teletype.git@master",
    "readline"
    "python-dateutil"
]

[project.optional-dependencies]
# pip install -e '.[tests]'
tests = [
  'pytest'
]

[tool.setuptools]
zip-safe = false #  force setuptools to always install the project as a directory. required by mypy(#7508)

[tool.isort]
profile = 'black'

[tool.pylint.format]
max-line-length = "88"

# https://github.com/python-lsp/pylsp-mypy
[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false